--- a/index.html
+++ b/index.html
@@ -639,22 +639,22 @@
         <div class="mainpart">
             <div class="left wow fadeInUp" data-wow-duration="1.5s">
                 <div class="fields">
-                    <form action="https://formsubmit.co/ahamedmaneesha@gmail.com" method="post" class="contact_form" id="contact_form">
-                        <div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
-                        <div class="empty_notice"><span>Please Fill Required Fields</span></div>
+                    <form action="/" method="post" class="contact_form" id="contact_form">
                         <div class="first_row">
                             <ul>
                                 <li>
-                                    <input id="name" type="text" placeholder="Name" autocomplete="off">
+                                    <input id="name" type="text" placeholder="Name">
                                 </li>
                                 <li>
-                                    <input id="email" type="email" placeholder="Email" autocomplete="on">
+                                    <input id="email" type="text" placeholder="Email">
                                 </li>
                             </ul>
                         </div>
                         <div class="second">
                             <textarea id="message" placeholder="Message"></textarea>
                         </div>
+                        <div class="empty_notice"><span>Please fill in all fields.</span></div>
+                        <div class="returnmessage"></div>
                         <div class="manee_tm_button">
                             <a id="send_message" href="#">Send Message</a>
                         </div>
@@ -669,19 +669,17 @@
         </div>
         <!-- Contact Popup -->
         <div class="manee_tm_contact_popup">
-            <div class="popup_inner">
-                <div class="popup_content">
-                    <span class="popup_icon">
-                        <img class="svg" src="img/svg/checkcircle.svg" alt="Success" />
-                    </span>
-                    <h3 class="popup_title">Message Sent Successfully!</h3>
-                    <p class="popup_message">Thank you for your message. I'll get back to you soon!</p>
-                    <div class="manee_tm_button">
-                        <a class="popup_close" href="#">Close</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+			<div class="popup_inner">
+				<div class="popup_icon">
+					<img class="svg" src="img/svg/checkcircle.svg" alt="">
+				</div>
+				<h3 class="popup_title">Message Sent Successfully!</h3>
+				<p class="popup_message">Thank you for contacting me!</p>
+				<div class="manee_tm_button">
+					<a class="popup_close" href="#">Close</a>
+				</div>
+			</div>
+		</div>
     </div>
 </div>
 <!-- /CONTACT -->
