--- a/index.html
+++ b/index.html
@@ -422,50 +422,50 @@
 								</div>
 								<div class="certification-card" data-date="2023" data-short-desc="Completed HRM Professional Certificate 2023." data-full-desc="Awarded to Ahamed Seenath Maneesha for completing the Human Resource Management Professional Certificate offered by Virtual Academy and Agriculture.lk, from August 28, 2022, to December 31, 2022. Issued on January 31, 2023.">
 									<div class="card-image"><img src="img/portfolio/008.jpeg" alt="HRM Professional Certificate" /><span class="badge">Achievement</span></div>
-									<div class="card-content"><h5>Human Resource Management Course</h5><p>Certificate of Achievement</p></div>
+									<div class="card-content"><h5>PCHRM Membership Letter</h5><p>Certificate of Achievement</p></div>
 								</div>
 								<div class="certification-card" data-date="2024" data-short-desc="Participated in English for Work Webinar 2024." data-full-desc="Awarded to Maneesha Ahamed for participating in the English for Work webinar conducted by Competence English Academy on May 31, 2024.">
-									<div class="card-image"><img src="img/portfolio/009.jpeg" alt="English for Work Certificate" /><span class="badge">Certificate</span></div>
+									<div class="card-image"><img src="img/portfolio/010.jpeg" alt="English for Work Certificate" /><span class="badge">Certificate</span></div>
 									<div class="card-content"><h5>English for Work Webinar</h5><p>Certificate of Participation</p></div>
 								</div>
 								<div class="certification-card" data-date="2024" data-short-desc="Attended Psychology & Counselling Workshop 2024." data-full-desc="Awarded to A. Seenath Maneesha for attending a Psychology & Counselling Workshop at ORINSTO Pvt Ltd, Sungavila, Polonnaruwa, on August 6, 2024.">
-									<div class="card-image"><img src="img/portfolio/010.jpeg" alt="Psychology Workshop Certificate" /><span class="badge">Certificate</span></div>
+									<div class="card-image"><img src="img/portfolio/011.jpeg" alt="Psychology Workshop Certificate" /><span class="badge">Certificate</span></div>
 									<div class="card-content"><h5>Psychology & Counselling Workshop</h5><p>Certificate of Participation</p></div>
 								</div>
 								<div class="certification-card" data-date="2024" data-short-desc="Participated in Video Competition 2024." data-full-desc="Awarded to A.S. Maneesha for participating in the 3 Minute International Video Competition 'My Green Entrepreneurial Journey,' held on August 23, 2024, at the 1st International Conference on Biomimicry for Sustainability.">
-									<div class="card-image"><img src="img/portfolio/011.jpeg" alt="Video Competition Certificate" /><span class="badge">Certificate</span></div>
+									<div class="card-image"><img src="img/portfolio/012.jpeg" alt="Video Competition Certificate" /><span class="badge">Certificate</span></div>
 									<div class="card-content"><h5>Green Entrepreneurial Video Competition</h5><p>Certificate of Participation</p></div>
 								</div>
 								<div class="certification-card" data-date="2024" data-short-desc="Participated in Tall Building Design Webinar 2024." data-full-desc="Awarded to Ahamed Seenath Maneesha for participating in a webinar on Sustainable Innovations in Tall Building Design, conducted by gapHQ on September 11, 2024.">
-									<div class="card-image"><img src="img/portfolio/012.jpeg" alt="Tall Building Design Certificate" /><span class="badge">Certificate</span></div>
-									<div class="card-content"><h5>Tall Building Design Webinar</h5><p>Certificate of Participation</p></div>
+									<div class="card-image"><img src="img/portfolio/013.jpeg" alt="Tall Building Design Certificate" /><span class="badge">Certificate</span></div>
+									<div class="card-content"><h5>Sustainable Innovations in Tall Building Design Webinar</h5><p>Certificate of Participation</p></div>
 								</div>
 								<div class="certification-card" data-date="2024" data-short-desc="Participated in Climate Justice Webinar 2024." data-full-desc="Awarded to Ahamed Seenath Maneesha for participating in a webinar on Bridging the Youth Across the Global Climate Justice, organized by INVYAM on August 12, 2024.">
-									<div class="card-image"><img src="img/portfolio/013.jpeg" alt="Climate Justice Certificate" /><span class="badge">Certificate</span></div>
+									<div class="card-image"><img src="img/portfolio/014.jpeg" alt="Climate Justice Certificate" /><span class="badge">Certificate</span></div>
 									<div class="card-content"><h5>Climate Justice Webinar</h5><p>Certificate of Participation</p></div>
 								</div>
 								<div class="certification-card" data-date="2024" data-short-desc="Participated in Career Skills Workshop 2024." data-full-desc="Awarded to A.S. Maneesha for participating in the Fundamental Career Skills Development Online Workshop organized by the 417 University Ambassadors Consortium on July 30, 2024.">
-									<div class="card-image"><img src="img/portfolio/014.jpeg" alt="Career Skills Certificate" /><span class="badge">Certificate</span></div>
-									<div class="card-content"><h5>Career Skills Development</h5><p>Certificate of Participation</p></div>
+									<div class="card-image"><img src="img/portfolio/015.jpeg" alt="Career Skills Certificate" /><span class="badge">Certificate</span></div>
+									<div class="card-content"><h5>G17 Career Skills Development</h5><p>Certificate of Participation</p></div>
 								</div>
 								<div class="certification-card" data-date="2024" data-short-desc="Participated in Community Engagement Webinar 2024." data-full-desc="Awarded to Ahamed Seenath Maneesha for participating in a webinar on Community Engagement in Engineering, conducted by gapHQ on October 10, 2024.">
-									<div class="card-image"><img src="img/portfolio/015.jpeg" alt="Community Engagement Certificate" /><span class="badge">Certificate</span></div>
+									<div class="card-image"><img src="img/portfolio/016.jpeg" alt="Community Engagement Certificate" /><span class="badge">Certificate</span></div>
 									<div class="card-content"><h5>Community Engagement in Engineering</h5><p>Certificate of Participation</p></div>
 								</div>
 								<div class="certification-card" data-date="2024" data-short-desc="Participated in Fire Safety Webinar 2024." data-full-desc="Awarded to Ahamed Seenath Maneesha for participating in a webinar on Fire Safety Engineering, conducted by gapHQ on September 11, 2024.">
-									<div class="card-image"><img src="img/portfolio/016.jpeg" alt="Fire Safety Certificate" /><span class="badge">Certificate</span></div>
+									<div class="card-image"><img src="img/portfolio/017.jpeg" alt="Fire Safety Certificate" /><span class="badge">Certificate</span></div>
 									<div class="card-content"><h5>Fire Safety Engineering</h5><p>Certificate of Participation</p></div>
 								</div>
 								<div class="certification-card" data-date="2024" data-short-desc="Participated in Water Management Webinar 2024." data-full-desc="Awarded to Ahamed Seenath Maneesha for participating in a webinar on Advancing Sustainable Water and Wastewater Management Solutions, conducted by gapHQ on November 5, 2024.">
-									<div class="card-image"><img src="img/portfolio/017.jpeg" alt="Water Management Certificate" /><span class="badge">Certificate</span></div>
+									<div class="card-image"><img src="img/portfolio/018.jpeg" alt="Water Management Certificate" /><span class="badge">Certificate</span></div>
 									<div class="card-content"><h5>Water and Wastewater Management</h5><p>Certificate of Participation</p></div>
 								</div>
 								<div class="certification-card" data-date="2023" data-short-desc="Completed First Aid & CPR Course 2023." data-full-desc="Awarded to Ahamed Seenath Maneesha for attending a course in First Aid and passing the Proficiency Examination by The St. John Ambulance Association, Gampaha Division, on October 29, 2023. Valid for three years.">
-									<div class="card-image"><img src="img/portfolio/018.jpeg" alt="First Aid Certificate" /><span class="badge">Completion</span></div>
+									<div class="card-image"><img src="img/portfolio/019.jpeg" alt="First Aid Certificate" /><span class="badge">Completion</span></div>
 									<div class="card-content"><h5>Standard First Aid & CPR</h5><p>Certificate of Completion</p></div>
 								</div>
 								<div class="certification-card" data-date="2023" data-short-desc="Completed HRM Professional Certificate 2023." data-full-desc="Awarded to Ahamed Seenath Maneesha for completing the Human Resource Management Professional Certificate offered by Virtual Academy and Agriculture.lk, from August 28, 2022, to December 31, 2022. Issued on January 31, 2023.">
-									<div class="card-image"><img src="img/portfolio/019.jpeg" alt="HRM Professional Certificate" /><span class="badge">Achievement</span></div>
+									<div class="card-image"><img src="img/portfolio/009.jpeg" alt="HRM Professional Certificate" /><span class="badge">Achievement</span></div>
 									<div class="card-content"><h5>Human Resource Management</h5><p>Certificate of Achievement</p></div>
 								</div>
 							</div>
