--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 							<ul>
 								<li>
 									<span class="year">2022 - 2026</span>
-									<h5>BSc (Hons) in Health Promotion (R)</h5>
+									<h5>B.Sc. (Hons) in Health Promotion (R)</h5>
 									<p>Rajarata University of Sri Lanka, Mihintale, LK</p>
 								</li>
 								<li>
@@ -505,7 +505,7 @@
 										</div>
 										<div class="short">
 											<h3>Rashma Rasmin</h3>
-											<span>BSc in Health Promotion,<br/>Master of Public Health in Epidemiology (R)</span>
+											<span>B.Sc. in Health Promotion,<br/>Master of Public Health in Epidemiology (R)</span>
 										</div>
 									</div>
 									<div class="icon">
@@ -527,8 +527,8 @@
 											<div class="main" data-img-url="img/testimonials/wmk.jpg"></div>
 										</div>
 										<div class="short">
-											<h3>S. Tharanga</h3>
-											<span>Regional Health Promotion Officer</span>
+											<h3>Wimukthi Baduge</h3>
+											<span>B.Sc. Hons in Health Promotion, </br>Rajarata University of Sri Lanka</span>
 										</div>
 									</div>
 									<div class="icon">
@@ -536,31 +536,10 @@
 									</div>
 								</div>
 								<div class="text">
-									<p>During our collaboration in the ECCD program, Maneesha showcased exceptional leadership and a deep commitment to public health. Her data-driven approach ensured our interventions were both meaningful and measurable.</p>
+									<p>Maneesha is a talented, enthusiastic, and disciplined individual who is passionate about learning and achieving her goals. She has worked with me on various community-based health promotion interventions, including a research project with the Adolescent and Youth Health Unit of the Family Health Bureau, Ministry of Health. As a dedicated youth volunteer, she demonstrated strong teamwork, leadership, and human-centered thinking. I am confident in her ability to handle future responsibilities successfully. Wishing her all the best in her future endeavors.</p>
 								</div>
 							</div>
-						</li>
-						<li>
-							<div class="list_inner">
-								<div class="details">
-									<div class="author">
-										<div class="image">
-											<div class="main" data-img-url="img/testimonials/mnj.jpg"></div>
-										</div>
-										<div class="short">
-											<h3>Prof. H. Fernando</h3>
-											<span>Career Guidance Unit</span>
-										</div>
-									</div>
-									<div class="icon">
-										<img class="svg" src="img/svg/quote.svg" alt="" />
-									</div>
-								</div>
-								<div class="text">
-									<p>As a student leader, Maneesha went above and beyond in every workshop. She is not just a facilitator — she is a catalyst for change.</p>
-								</div>
-							</div>
-						</li>
+						</li>						
 					</ul>
 				</div>
 			</div>
