--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 									</div>
 								</div>
 								<div class="text">
-									<p>Maneesha is a talented, enthusiastic, and disciplined individual who is passionate about learning and achieving her goals. She has worked with me on various community-based health promotion interventions, including a research project with the Adolescent and Youth Health Unit of the Family Health Bureau, Ministry of Health. As a dedicated youth volunteer, she demonstrated strong teamwork, leadership, and human-centered thinking. I am confident in her ability to handle future responsibilities successfully. Wishing her all the best in her future endeavors.</p>
+									<p>"Maneesha is a talented, disciplined, and enthusiastic individual passionate about learning. She contributed to community health projects, including work with the Family Health Bureau. As a youth volunteer, she demonstrated leadership, teamwork, and a human-centered approach. I’m confident in her success and wish her the very best."</p>
 								</div>
 							</div>
 						</li>						
@@ -546,122 +546,122 @@
 		</div>
 		<!-- /TESTIMONIALS -->
 		
-<!-- NEWS -->
-<div class="manee_tm_news" id="blog">
-    <div class="container">
-        <div class="manee_tm_title">
-            <h3>News</h3>
-            <p>Highlights of my journey in health promotion and community development.</p>
-        </div>
-        <div class="news_inner wow fadeInLeft" data-wow-duration="1s">
-            <div class="news_list_wrapper">
-                <ul class="news_list"></ul>
-            </div>
-            <div class="pagination">
-                <ul class="pagination_dots"></ul>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- MODAL -->
-<div class="manee_tm_modalbox">
-    <div class="box_inner">
-        <div class="close">
-            <a href="#"><svg class="svg" viewBox="0 0 24 24"><path d="M6 6l12 12M18 6L6 18"/></svg></a>
-        </div>
-        <div class="description_wrap"></div>
-    </div>
-</div>
-<!-- /MODAL -->
-<!-- /NEWS -->
-
-<!-- CONTACT -->
-<div class="manee_tm_contact" id="contact">
-    <div class="container">
-        <div class="manee_tm_title">
-            <h3>Contact</h3>
-            <p>I'm always open to discussing health promotion opportunities or partnerships.</p>
-        </div>
-        <div class="extra_info">
-            <ul class="wrapper">
-                <li class="wow fadeInLeft" data-wow-duration="1s">
-                    <div class="list_inner">
-                        <span class="icon"><img class="svg" src="img/svg/telephone-2.svg" alt="Phone" /></span>
-                        <h3>Phone:</h3>
-                        <ul class="in">
-                            <li>076 6820884</li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
-                    <div class="list_inner">
-                        <span class="icon"><img class="svg" src="img/svg/email-2.svg" alt="Email" /></span>
-                        <h3>Email:</h3>
-                        <ul class="in">
-                            <li><a href="mailto:ahamedmaneesha@gmail.com">ahamedmaneesha@gmail.com</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.4s">
-                    <div class="list_inner">
-                        <span class="icon"><img class="svg" src="img/svg/location-2.svg" alt="Address" /></span>
-                        <h3>Address:</h3>
-                        <ul class="in">
-                            <li>
-                                <p>No 21, Kattakaduwa<br />Galgamuwa, Sri Lanka</p>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="mainpart">
-            <div class="left wow fadeInUp" data-wow-duration="1.5s">
-                <div class="fields">
-                    <form action="/" method="post" class="contact_form" id="contact_form">
-                        <div class="first_row">
-                            <ul>
-                                <li>
-                                    <input id="name" type="text" placeholder="Name">
-                                </li>
-                                <li>
-                                    <input id="email" type="text" placeholder="Email">
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="second">
-                            <textarea id="message" placeholder="Message"></textarea>
-                        </div>
-                        <div class="empty_notice"><span>Please fill in all fields.</span></div>
-                        <div class="returnmessage"></div>
-                        <div class="manee_tm_button">
-                            <a id="send_message" href="#">Send Message</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="right wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
-                <div class="map_wrap">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.1681999999997!2d80.20279981476868!3d7.18099999481994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3afcd4f6b7d8c7b7%3A0x8e7f1f8c8d7e4f2!2sKattakaduwa%2C%20Galgamuwa%2C%20Sri%20Lanka!5e0!3m2!1sen!2slk!4v1730131234567!5m2!1sen!2slk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
-        </div>
-        <!-- Contact Popup -->
-        <div class="manee_tm_contact_popup">
-			<div class="popup_inner">
-				<div class="popup_icon">
-					<img class="svg" src="img/svg/checkcircle.svg" alt="">
+		<!-- NEWS -->
+		<div class="manee_tm_news" id="blog">
+			<div class="container">
+				<div class="manee_tm_title">
+					<h3>News</h3>
+					<p>Highlights of my journey in health promotion and community development.</p>
 				</div>
-				<h3 class="popup_title">Message Sent Successfully!</h3>
-				<p class="popup_message">Thank you for contacting me!</p>
-				<div class="manee_tm_button">
-					<a class="popup_close" href="#">Close</a>
+				<div class="news_inner wow fadeInLeft" data-wow-duration="1s">
+					<div class="news_list_wrapper">
+						<ul class="news_list"></ul>
+					</div>
+					<div class="pagination">
+						<ul class="pagination_dots"></ul>
+					</div>
 				</div>
 			</div>
 		</div>
-    </div>
-</div>
-<!-- /CONTACT -->
+		<!-- MODAL -->
+		<div class="manee_tm_modalbox">
+			<div class="box_inner">
+				<div class="close">
+					<a href="#"><svg class="svg" viewBox="0 0 24 24"><path d="M6 6l12 12M18 6L6 18"/></svg></a>
+				</div>
+				<div class="description_wrap"></div>
+			</div>
+		</div>
+		<!-- /MODAL -->
+		<!-- /NEWS -->
+
+		<!-- CONTACT -->
+		<div class="manee_tm_contact" id="contact">
+			<div class="container">
+				<div class="manee_tm_title">
+					<h3>Contact</h3>
+					<p>I'm always open to discussing health promotion opportunities or partnerships.</p>
+				</div>
+				<div class="extra_info">
+					<ul class="wrapper">
+						<li class="wow fadeInLeft" data-wow-duration="1s">
+							<div class="list_inner">
+								<span class="icon"><img class="svg" src="img/svg/telephone-2.svg" alt="Phone" /></span>
+								<h3>Phone:</h3>
+								<ul class="in">
+									<li>076 6820884</li>
+								</ul>
+							</div>
+						</li>
+						<li class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
+							<div class="list_inner">
+								<span class="icon"><img class="svg" src="img/svg/email-2.svg" alt="Email" /></span>
+								<h3>Email:</h3>
+								<ul class="in">
+									<li><a href="mailto:ahamedmaneesha@gmail.com">ahamedmaneesha@gmail.com</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.4s">
+							<div class="list_inner">
+								<span class="icon"><img class="svg" src="img/svg/location-2.svg" alt="Address" /></span>
+								<h3>Address:</h3>
+								<ul class="in">
+									<li>
+										<p>No 21, Kattakaduwa<br />Galgamuwa, Sri Lanka</p>
+									</li>
+								</ul>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="mainpart">
+					<div class="left wow fadeInUp" data-wow-duration="1.5s">
+						<div class="fields">
+							<form action="/" method="post" class="contact_form" id="contact_form">
+								<div class="first_row">
+									<ul>
+										<li>
+											<input id="name" type="text" placeholder="Name">
+										</li>
+										<li>
+											<input id="email" type="text" placeholder="Email">
+										</li>
+									</ul>
+								</div>
+								<div class="second">
+									<textarea id="message" placeholder="Message"></textarea>
+								</div>
+								<div class="empty_notice"><span>Please fill in all fields.</span></div>
+								<div class="returnmessage"></div>
+								<div class="manee_tm_button">
+									<a id="send_message" href="#">Send Message</a>
+								</div>
+							</form>
+						</div>
+					</div>
+					<div class="right wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
+						<div class="map_wrap">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.1681999999997!2d80.20279981476868!3d7.18099999481994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3afcd4f6b7d8c7b7%3A0x8e7f1f8c8d7e4f2!2sKattakaduwa%2C%20Galgamuwa%2C%20Sri%20Lanka!5e0!3m2!1sen!2slk!4v1730131234567!5m2!1sen!2slk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						</div>
+					</div>
+				</div>
+				<!-- Contact Popup -->
+				<div class="manee_tm_contact_popup">
+					<div class="popup_inner">
+						<div class="popup_icon">
+							<img class="svg" src="img/svg/checkcircle.svg" alt="">
+						</div>
+						<h3 class="popup_title">Message Sent Successfully!</h3>
+						<p class="popup_message">Thank you for contacting me!</p>
+						<div class="manee_tm_button">
+							<a class="popup_close" href="#">Close</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /CONTACT -->
 		
 	</div>
 	<!-- /MAINPART -->
